--- a/TelaInicial/Properties/Resources.resx
+++ b/TelaInicial/Properties/Resources.resx
@@ -157,4 +157,7 @@
   <data name="iconJogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconJogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="montaria_cavalo_desmontado" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\montaria_cavalo_desmontado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
